Beleg überarbeiteBeleg überarbeitett

--- a/ctDataGenerator/Beleg/Ingo/AktuellerWissensstand.tex
+++ b/ctDataGenerator/Beleg/Ingo/AktuellerWissensstand.tex
@@ -1,6 +1,5 @@
 \section{Der aktuelle Wissensstand}\label{DerAktuelleWissensstand}
-Noch nicht vorhandene Kenntnisse über die Erstellung von Ausführunsplänen werden haupt-
-sächlich aus Onlineressourcen bezogen. Primärliteratur zur gewählten Datenbank
-ist unter www.postgresql.org zu ?nden. Unter dieser Adresse ist das gewählte
-DBMS dokumentiert. Auf dieser Seite wird eine Einf¨uhrung in PostgreSQL gegeben.
-Es gibt Installationsanleitungen, eine umfassende Dokumentation von PostgreSQL und Werkzeuge die ein e?zienteres Arbeiten mit PostgreSQL ermöglichen.
+Noch nicht vorhandene Kenntnisse über die Erstellung von Ausführunsplänen werden hauptsächlich aus Onlineressourcen bezogen. Primärliteratur zur gewählten Datenbank
+ist unter www.postgresql.org zu finden. Unter dieser Adresse ist das gewählte
+DBMS dokumentiert. Auf dieser Seite wird eine Einführung in PostgreSQL gegeben.
+Es gibt Installationsanleitungen, eine umfassende Dokumentation von PostgreSQL und Werkzeuge die ein effizienteres Arbeiten mit PostgreSQL ermöglichen.
