--- a/ctDataGenerator/Beleg/Ingo/Queries.tex
+++ b/ctDataGenerator/Beleg/Ingo/Queries.tex
@@ -1,5 +1,7 @@
 \section{Datenbankabfragen}\label{Datenbankabfragen}
 
+Im Folgenden werden drei Queries vorgestellt, für die später die Ausführungspläne näher betrachtet werden.
+
 Query 1: Alle user anzeigen, die am event mit dem eventnamen "`event1"' teilnehmen.
 
 \begin{lstlisting}[caption=Query 1, firstnumber=1]{code:Query1}
