--- a/ctDataGenerator/Beleg/Ingo/Aufgabenstellung.tex
+++ b/ctDataGenerator/Beleg/Ingo/Aufgabenstellung.tex
@@ -2,3 +2,4 @@
 In diesem Projekt werden Ausführungspläne für bestimmte Queries untersucht. Dazu werden Queries ausgewählt, die im Bereich OLAP und Data Warehouse angesiedelt sind. Als Grundlage wird ein Datenbankentwurf für ein Projekt aus der Vorlesungsreihe XML genommen.
 Die Tabellen sollen mit Testdaten gefüllt werden. Dazu ist der Datengenerator aus dem Projekt Datenbankkonfigurationen anzupassen.
 Die Abfragen werden auf den gefüllten Tabellen angewendet. Die Ausführungspläne, die dafür erzeugt werden, werden nach Performancegesichtspunkten untersucht.
+Nicht untersucht werden soll die Auswirkung von veralteten Statistiken auf die Ausführungsgeschwindigkeit von Ausführungsplänen. Alle Abfragen basieren stets auf aktuellen Statistiken.
