--- a/ctDataGenerator/Beleg/master.tex
+++ b/ctDataGenerator/Beleg/master.tex
@@ -109,13 +109,13 @@
 \input{Ingo/AktuellerWissensstand}
 \input{Ingo/DBMS}
 \input{Ingo/WasIstEinAusfuehrungsplan}
-%\input{Christof/Abarbeitung}
-%\input{Christof/Ausfuehrungsplan}
-%\input{Christof/Kostenparameter}
-%\input{Christof/Indexe}
-%\input{Christof/Plananalyse}
-%\input{Christof/Planvergleich}
-%\input{Christof/Statistiken}
+\input{Christof/Abarbeitung}
+\input{Christof/Ausfuehrungsplan}
+\input{Christof/Kostenparameter}
+\input{Christof/Indexe}
+\input{Christof/Plananalyse}
+\input{Christof/Planvergleich}
+\input{Christof/Statistiken}
 \input{Ingo/DieDreiScanAlgorithmen}
 \input{Ingo/DieDreiJoinAlgorithmen}
 
