--- a/ctDataGenerator/Beleg/Arbeitsaufteilung.tex
+++ b/ctDataGenerator/Beleg/Arbeitsaufteilung.tex
@@ -1,44 +1,38 @@
 \newpage
 \chapter{Arbeitsaufteilung}
 
-%Tabelle 1:
-\begin{table}[h] \begin{flushleft} \begin{tabular}{|l||c|c|c|c|c|c|}
-\hline
-\textbf{Arbeit}		&	\textbf{C. Ochmann}	& \textbf{I. Körner}  \\ \hline \hline
-
-Abstract   	      &                     & 0       \\
-
-\hline \hline
-\end{tabular} \end{flushleft} \caption{Aufteilung vom Abstract} \end{table}
-
-%Tabelle 2:
 
 \begin{table}[h] \begin{flushleft}  \begin{tabular}{|l||c|c|c|c|c|c|}
 \hline
 \textbf{Arbeit}		&	\textbf{C. Ochmann}	& \textbf{I. Körner}  \\ \hline \hline
+Abstract   	      &                     & 0       \\
 Einleitung  &                             		      & ~\ref{Einleitung} \\
-Aufgabenstellung&                                  &      			            \\
-Forschungsgegenstand&                              &  \\ 
-akt. Wissensstand&                                      &   \\ 
-Eingesetzte Datenbank &  & \\
-Projektplanung &  & \\
-Anwendungsfälle&                                   & \\ 
-EasyMock   	&                                      & \\ 
-Dependency Injection&                              & \\ 
+Aufgabenstellung&                                  & ~\ref{Aufgabenstellung}  \\
+Forschungsgegenstand&                              & ~\ref{RelevanzDesForschungsgegenstandes} \\ 
+akt. Wissensstand&                                      & ~\ref{DerAktuelleWissensstand}  \\ 
+PostgreSQL&                                         & ~\ref{PostgreSQL} \\
+Was ist ein Ausführungsplan? &                      &~\ref{WasIstEinAusfuehrungsplan} \\
+Die Abarbeitung von Abfragen in PostgreSQL&         & \\ 
+Ausführungsplan verändern&         & \\ 
+Kostenparameter&         & \\ 
+Indexe&                                              & \\ 
+Indextypen&         & \\ 
+Pläne mit Bitmap Index Scan&         & \\ 
+Plananalyse&         & \\ 
+Planvergleich&         & \\ 
+Statistiken&         & \\ 
+Die drei Scan-Algorithmen&                              & ~\ref{DieDreiScanAlgorithmen} \\ 
+Die drei Join-Algorithmen&         											& ~\ref{DieDreiJoinAlgorithmen}\\ 
+Datenbankentwurf&         															& ~\ref{Datenbankentwurf} \\ 
+Der Datengenerator&         																& ~\ref{DerDatengenerator} \\ 
+Datenbankabfragen&         															& ~\ref{Datenbankabfragen} \\ 
+Was ist ein Hints-System?&        												 & ~\ref{WasIstEinHintsSystem} \\ 
+Planerverwirrung&        																		 & ~\ref{Planerverwirrung} \\ 
+Reihenfolge von Joins erzwingen&     										    & ~\ref{ReihenfolgeVonJoinsErzwingen} \\ 
+Ausführungspläne für Queries mit und ohne Index&         & ~\ref{AusfuehrungsplaeneFuerQueriesMitUndOhneIndex} \\ 
+Was tun bei langsamen Ausführungsplänen?&       			  & ~\ref{WasTunBeiLangsamenAusfuehrungsplaenen} \\ 
+Zusammenfassung&         																& ~\ref{Zusammenfassung} \\ 
+Ausblick&        																					 & ~\ref{Ausblick} \\ 
 \hline \hline
 \end{tabular} \end{flushleft} \caption{Aufteilung von Kapitel 2} \end{table}
 
-\begin{table}[h] \begin{flushleft} \begin{tabular}{|l||c|c|c|c|c|c|}
-\hline
-\textbf{Arbeit}		&	\textbf{C. Ochmann}	& \textbf{I. Körner}  \\ \hline \hline
-Datengenerator&                                    & \\
-\hline \hline
-\end{tabular} \end{flushleft} \caption{Aufteilung von Kapitel 3} \end{table}
-
-
-\begin{table}\begin{flushleft}\begin{tabular}{|l||c|c|c|c|c|c|}
-\hline
-\textbf{Arbeit}		&	\textbf{C. Ochmann}	& \textbf{I. Körner}  \\ \hline \hline
-Ausblick &  & \\
-\hline \hline
-\end{tabular} \end{flushleft} \caption{Aufteilung von Kapitel 6} \end{table}
