--- a/ctDataGenerator/Beleg/Christof/Planvergleich.tex
+++ b/ctDataGenerator/Beleg/Christof/Planvergleich.tex
@@ -1,6 +1,6 @@
 \section{Planvergleich}
 
-MIt dem Befehl \textbf{EXPLAIN ANALYZE} kann man die geschätzten Kosten mit den Ergebnissen der Ausführung vergleichen. Die Anfrage wird auch auch tatsächlich ausgeführt:
+Mit dem Befehl \textbf{EXPLAIN ANALYZE} kann man die geschätzten Kosten mit den Ergebnissen der Ausführung vergleichen. Die Anfrage wird auch auch tatsächlich ausgeführt:
 
 \begin{verbatim}
 "Hash Join  (cost=480.53..506.29 rows=1 width=38) 
