--- a/ctDataGenerator/Beleg/master.tex
+++ b/ctDataGenerator/Beleg/master.tex
@@ -89,6 +89,8 @@
 
 \bibitem{bib2}{Freeman, Eric (2007): Entwurfsmuster von Kopf bis Fuﬂ. O'REILLY}
 
+\bibitem{bib3}{Peter Eisentraut, Bernd Helmle. (2009): PostgreSQL-Administration. O'REILLY}
+
 \bibitem{bib4}{\begin{verbatim}http://www.postgresql.org/ (08.06.2012)\end{verbatim}} 
 
 \bibitem{bib5}{\begin{verbatim}http://wiki.postgresql.org/ (08.06.2012)\end{verbatim}} 
@@ -109,13 +111,13 @@
 \input{Ingo/AktuellerWissensstand}
 \input{Ingo/DBMS}
 \input{Ingo/WasIstEinAusfuehrungsplan}
-%\input{Christof/Abarbeitung}
-%\input{Christof/Ausfuehrungsplan}
-%\input{Christof/Kostenparameter}
-%\input{Christof/Indexe}
-%\input{Christof/Plananalyse}
-%\input{Christof/Planvergleich}
-%\input{Christof/Statistiken}
+\input{Christof/Abarbeitung}
+\input{Christof/Ausfuehrungsplan}
+\input{Christof/Kostenparameter}
+\input{Christof/Indexe}
+\input{Christof/Plananalyse}
+\input{Christof/Planvergleich}
+\input{Christof/Statistiken}
 \input{Ingo/DieDreiScanAlgorithmen}
 \input{Ingo/DieDreiJoinAlgorithmen}
 
