--- a/ctDataGenerator/Beleg/Arbeitsaufteilung.tex
+++ b/ctDataGenerator/Beleg/Arbeitsaufteilung.tex
@@ -12,15 +12,15 @@ Forschungsgegenstand&                              & ~\ref{RelevanzDesForschungs
 akt. Wissensstand&                                      & ~\ref{DerAktuelleWissensstand}  \\ 
 PostgreSQL&                                         & ~\ref{PostgreSQL} \\
 Was ist ein Ausführungsplan? &                      &~\ref{WasIstEinAusfuehrungsplan} \\
-Die Abarbeitung von Abfragen in PostgreSQL&         & \\ 
-Ausführungsplan verändern&         & \\ 
-Kostenparameter&         & \\ 
-Indexe&                                              & \\ 
-Indextypen&         & \\ 
-Pläne mit Bitmap Index Scan&         & \\ 
-Plananalyse&         & \\ 
-Planvergleich&         & \\ 
-Statistiken&         & \\ 
+Die Abarbeitung von Abfragen in PostgreSQL&  ~\ref{Abarbeitung}       & \\ 
+Ausführungsplan verändern& ~\ref{Ausfuehrungsplan}        & \\ 
+Kostenparameter&   ~\ref{Kostenparameter}      & \\ 
+Indexe&          ~\ref{Indexe}                                    & \\ 
+Indextypen&    ~\ref{Indextypen}     & \\ 
+Pläne mit Bitmap Index Scan&  ~\ref{Plaene}       & \\ 
+Plananalyse&   ~\ref{Plananalyse}      & \\ 
+Planvergleich&  ~\ref{Planvergleich}       & \\ 
+Statistiken&  ~\ref{Statistiken}       & \\ 
 Die drei Scan-Algorithmen&                              & ~\ref{DieDreiScanAlgorithmen} \\ 
 Die drei Join-Algorithmen&         											& ~\ref{DieDreiJoinAlgorithmen}\\ 
 Datenbankentwurf&         															& ~\ref{Datenbankentwurf} \\ 
