--- a/ctDataGenerator/Beleg/Christof/Kostenparameter.tex
+++ b/ctDataGenerator/Beleg/Christof/Kostenparameter.tex
@@ -1,4 +1,4 @@
-\section{Kostenparameter}
+\section{Kostenparameter}\label{Kostenparameter}
 
 Außer den Plantypen gibt es noch die Kostenparameter, die den erwarteten I/O und CPU-Aufwand zählen. Ändert man diese Konfigurationsparameter, dann werden die Anfragen andere Plankosten haben und es wird eventuell ein anderer, günstigerer Ausführungsplan gewählt. Man muss die Kostenfaktoren so einstellen, dass der Plan dem Planer auch am schnellsten erscheint und somit ausgewählt wird.
 
