--- a/ctDataGenerator/Beleg/Christof/Plananalyse.tex
+++ b/ctDataGenerator/Beleg/Christof/Plananalyse.tex
@@ -1,4 +1,4 @@
-\section{Plananalyse}
+\section{Plananalyse}\label{Plananalyse}
 
 Mit dem Befehl \textbf{EXPLAIN} gefolgt von der eigentlichen Anfrage können die Ausführungpläne angesehen werden:
 
