--- a/ctDataGenerator/Beleg/Christof/Planvergleich.tex
+++ b/ctDataGenerator/Beleg/Christof/Planvergleich.tex
@@ -1,4 +1,4 @@
-\section{Planvergleich}
+\section{Planvergleich}\label{Planvergleich}
 
 Mit dem Befehl \textbf{EXPLAIN ANALYZE} kann man die geschätzten Kosten mit den Ergebnissen der Ausführung vergleichen. Die Anfrage wird auch auch tatsächlich ausgeführt:
 
